[package]
name = "rocket-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rocket = {version = "0.5.0-rc.1", features = ["json"]} 
rusqlite = "0.26.3"
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["handlebars", "tera"]}
